--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
                 </button>
             </div>
         </div>
+        <div class="sidebar-backdrop" id="sidebar-backdrop" aria-hidden="true"></div>
         <!-- Main Content -->
         <div class="main-content">
         <!-- Header -->
         <div class="header">
+            <button type="button" class="sidebar-toggle" id="sidebar-toggle" aria-label="Abrir menu de navegação" aria-expanded="false">
+                <i class="fas fa-bars" aria-hidden="true"></i>
+            </button>
             <div class="header-title">
                 <h1>Dashboard</h1>
             </div>
