--- a/style.html
+++ b/style.html
@@ -2700,7 +2700,7 @@
             }
             .main-content {
                 margin-left: 0;
-                padding: 16px;
+                padding: 16px 20px 16px 16px;
             }
             .sidebar-toggle {
                 display: inline-flex;
